--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
 <div class="caixa-perguntas"></div>
 <div class="caixa-alternativa"></div>
+<div class="caixa-resultado"></div>
+<p class ="texto-resultado"></p>
 </body>
 </html>
